# Nova

./: .bazelrc  .deepsource.toml  .dockerignore  .env  .gitignore  .gitmodules  .protolint.yml  BUILD  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.cross  ENVIRONMENT.md  LICENSE  Makefile  README.md  TODO.md  WORKSPACE  azure-pipelines.yml  deps.bzl  docker-compose.yaml  go.mod  go.sum  nats.config  shell.nix
.ci/: build.sh
common/: BUILD  BUILD.bazel  Cargo.toml  go.mod  go.sum  logger.go  prometheus.go  version.go.in
common/cargo/: BUILD.bazel
common/gateway/: BUILD.bazel  compressor.go  event-names.go  transporter.go
common/lib/: lib.rs
common/management/: BUILD.bazel  nova.management.v1alpha.proto
common/management/rpc/: BUILD.bazel  nova.management.rpc.v1alpha.proto
common/rust/: BUILD.bazel  Cargo.toml
common/rust/cargo/: BUILD.bazel
common/rust/src/: config.rs  discord_models.rs  error.rs  lib.rs  monitoring.rs  nats.rs  payloads.rs  serializable_event.rs
exes/all/: .gitignore  Cargo.toml  Makefile  build.rs  main.go
exes/all-in-one/: Cargo.toml  Makefile  build.rs  main.go
exes/all-in-one/src/: errors.rs  ffi.rs  lib.rs  main.rs  utils.rs
exes/all/src/: lib.rs
exes/cache/: Cargo.toml  README.md
exes/cache/src/: config.rs  main.rs
exes/gateway/: Cargo.toml
exes/gateway/src/: config.rs  lib.rs  main.rs
exes/ratelimit/: Cargo.toml
exes/ratelimit/benches/: bucket.rs
exes/ratelimit/src/: config.rs  grpc.rs  lib.rs  main.rs
exes/rest/: Cargo.toml
exes/rest/src/: config.rs  handler.rs  lib.rs  main.rs
exes/webhook/: Cargo.toml
exes/webhook/src/: config.rs  lib.rs  main.rs
gateway/: BUILD  BUILD.bazel  Cargo.toml  README.md  docker-compose.yaml  go.mod  go.sum  main.go
gateway/cargo/: BUILD.bazel
gateway/config/: default.toml  default.yaml
gateway/lib/: BUILD.bazel  logger.go  prometheus.go
gateway/lib/gateway/: BUILD.bazel  gateway.go  options.go
gateway/src/: cluster_manager.rs  config.rs  error.rs  main.rs  utils.rs
gateway/src/client/: connexion.rs  error.rs  mod.rs  shard.rs  state.rs  structs.rs  utils.rs
gateway/src/connection/: mod.rs  stream.rs  utils.rs
gateway/src/payloads/: dispatch.rs  gateway.rs  mod.rs
gateway/src/shard/: actions.rs  connection.rs  mod.rs  state.rs
libs/all_in_one/: Cargo.toml  build.rs
libs/all_in_one/src/: errors.rs  ffi.rs  utils.rs
libs/leash/: Cargo.toml
libs/leash/src/: lib.rs
libs/shared/: Cargo.toml
libs/shared/src/: config.rs  error.rs  lib.rs  nats.rs  opentelemetry.rs  payloads.rs  redis.rs
manager/: BUILD.bazel  main.go
manager/lib/: BUILD.bazel  config.go  main.go
manager/lib/scheduler/: BUILD.bazel  main.go
manager/lib/services/: BUILD.bazel  status-server.go
novactl/: BUILD.bazel  README.md  go.mod  go.sum  main.go
novactl/cmd/: BUILD.bazel  cluster.go  init.go  version.go
novactl/lib/: BUILD.bazel  conn.go  version_test.go  vesion.go
novalet/: BUILD.bazel  go.mod  main.go
novalet/lib/: BUILD.bazel  internal_transporter.go  nats_standalone.go
ratelimiter/: BUILD  CHANGELOG.md  Cargo.toml  README.md  build.rs
ratelimiter/cargo/: BUILD.bazel  crates.bzl
ratelimiter/cargo/remote/: BUILD.anyhow-1.0.42.bazel  BUILD.async-stream-0.3.2.bazel  BUILD.async-stream-impl-0.3.2.bazel  BUILD.async-trait-0.1.51.bazel  BUILD.autocfg-1.0.1.bazel  BUILD.base64-0.13.0.bazel  BUILD.bitflags-1.2.1.bazel  BUILD.bytes-1.0.1.bazel  BUILD.cfg-if-1.0.0.bazel  BUILD.either-1.6.1.bazel  BUILD.fixedbitset-0.2.0.bazel  BUILD.fnv-1.0.7.bazel  BUILD.futures-channel-0.3.16.bazel  BUILD.futures-core-0.3.16.bazel  BUILD.futures-sink-0.3.16.bazel  BUILD.futures-task-0.3.16.bazel  BUILD.futures-util-0.3.16.bazel  BUILD.getrandom-0.2.3.bazel  BUILD.h2-0.3.3.bazel  BUILD.hashbrown-0.11.2.bazel  BUILD.heck-0.3.3.bazel  BUILD.hermit-abi-0.1.19.bazel  BUILD.http-0.2.4.bazel  BUILD.http-body-0.4.2.bazel  BUILD.httparse-1.4.1.bazel  BUILD.httpdate-1.0.1.bazel  BUILD.hyper-0.14.11.bazel  BUILD.hyper-timeout-0.4.1.bazel  BUILD.indexmap-1.7.0.bazel  BUILD.itertools-0.10.1.bazel  BUILD.itoa-0.4.7.bazel  BUILD.lazy_static-1.4.0.bazel  BUILD.libc-0.2.98.bazel  BUILD.log-0.4.14.bazel  BUILD.memchr-2.4.0.bazel  BUILD.mio-0.7.13.bazel  BUILD.miow-0.3.7.bazel  BUILD.multimap-0.8.3.bazel  BUILD.ntapi-0.3.6.bazel  BUILD.num_cpus-1.13.0.bazel  (+46 more)
ratelimiter/lib/: lib.rs
ratelimiter/proto/: BUILD.bazel  nova.ratelimit.v1.proto  nova.ratelimit.v1alpha.proto  nova_ratelimit_v1.proto
ratelimiter/src/: bucket.rs  main.rs  redis_client.rs
rest/: BUILD  Cargo.toml
rest-ratelimiter/: BUILD  Cargo.toml
rest-ratelimiter/cargo/: BUILD.bazel  crates.bzl
rest-ratelimiter/cargo/remote/: BUILD.anyhow-1.0.42.bazel  BUILD.async-stream-0.3.2.bazel  BUILD.async-stream-impl-0.3.2.bazel  BUILD.async-trait-0.1.51.bazel  BUILD.autocfg-1.0.1.bazel  BUILD.base64-0.13.0.bazel  BUILD.bitflags-1.2.1.bazel  BUILD.bytes-1.0.1.bazel  BUILD.cfg-if-1.0.0.bazel  BUILD.either-1.6.1.bazel  BUILD.fixedbitset-0.2.0.bazel  BUILD.fnv-1.0.7.bazel  BUILD.futures-channel-0.3.16.bazel  BUILD.futures-core-0.3.16.bazel  BUILD.futures-sink-0.3.16.bazel  BUILD.futures-task-0.3.16.bazel  BUILD.futures-util-0.3.16.bazel  BUILD.getrandom-0.2.3.bazel  BUILD.h2-0.3.3.bazel  BUILD.hashbrown-0.11.2.bazel  BUILD.heck-0.3.3.bazel  BUILD.hermit-abi-0.1.19.bazel  BUILD.http-0.2.4.bazel  BUILD.http-body-0.4.2.bazel  BUILD.httparse-1.4.1.bazel  BUILD.httpdate-1.0.1.bazel  BUILD.hyper-0.14.11.bazel  BUILD.hyper-timeout-0.4.1.bazel  BUILD.indexmap-1.7.0.bazel  BUILD.itertools-0.10.1.bazel  BUILD.itoa-0.4.7.bazel  BUILD.lazy_static-1.4.0.bazel  BUILD.libc-0.2.98.bazel  BUILD.log-0.4.14.bazel  BUILD.memchr-2.4.0.bazel  BUILD.mio-0.7.13.bazel  BUILD.miow-0.3.7.bazel  (+49 more)
rest-ratelimiter/proto/: BUILD.bazel  nova.ratelimit.v1.proto
rest-ratelimiter/protos/: BUILD.bazel  nova.ratelimit.v1.proto
rest/cargo/: BUILD.bazel
rest/src/: main.rs
webhook/: .gitignore  BUILD  BUILD.bazel  Cargo.toml  go.mod  main.go
webhook/cargo/: BUILD.bazel  crates.bzl
webhook/config/: default.yaml
webhook/src/: config.rs  handle.rs  main.rs  utils.rs
(+674 files in other folders)
