[workspace]

members = [
    "webhook",
    "gateway",
    "cache",
    "common/rust",
    "rest"
]

[package]
name = "nova"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "nova"
path = "src/main.rs"

[dependencies]
libc = "0.2.101"

[package.metadata.raze]
workspace_path = "//cargo"
genmode = "Remote"
default_gen_buildrs = true
package_aliases_dir = "cargo"
experimental_api = true

[package.metadata.raze.crates.cpufeatures.'*']
skipped_deps = ["libc-0.2.104"]
additional_deps = ["@raze__libc__0_2_104//:libc"]

[package.metadata.raze.crates.ring.'*']
compile_data_attr = "glob([\"*/**\"])"
skipped_deps = ["once_cell-1.8.0"]
additional_deps = ["@raze__once_cell__1_8_0//:once_cell"]

[package.metadata.raze.crates.flate2.'*']
compile_data_attr = "glob([\"*/**\"])"
skipped_deps = ["miniz_oxide-0.4.4"]
additional_deps = ["@raze__miniz_oxide__0_4_4//:miniz_oxide"]

[package.metadata.raze.crates.webpki.'*']
compile_data_attr = "glob([\"*/**\"])"
