[package]
name = "common"
version = "0.1.0"
edition = "2018"

[dependencies]
tonic = "0.5"
prost = "0.8"
tokio = { version = "1", features = ["full"] }


[build-dependencies]
tonic-build = { version = "0.5", features = ["transport", "prost"], default-features = false }

[dev-dependencies]
tonic-build = { version = "0.5", features = ["transport", "prost"], default-features = false }

