load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "gateway_lib",
    srcs = ["main.go"],
    importpath = "github.com/discordnova/nova/gateway",
    visibility = ["//visibility:public"],
    deps = [
        "//common",
        "//gateway/lib/gateway",
        "//gateway/lib/gateway/compression",
        "//gateway/lib/gateway/transporters",
        "@com_github_rs_zerolog//log",
    ],
)

go_binary(
    name = "gateway",
    embed = [":gateway_lib"],
    visibility = ["//visibility:public"],
)