[package]
name = "gateway"
version = "0.1.0"
edition = "2018"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "*", features = ["rustls-tls"] }
url = "2.2.2"
futures-util = "0.3.17"
log = { version = "0.4", features = ["std"] }
pretty_env_logger = "0.4"
serde_json = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
tokio-stream = "0.1.7"
async-stream = "0.3.2"
futures-core = "0.3.17"
serde_repr = "0.1"
flate2 = "1.0"
async-nats = "0.10.1"
enumflags2 = { version ="0.7.1", features = ["serde"] }
common = { path = "../common/rust" }
tokio-scoped = "0.1.0"
futures = "0.3.17"