load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")

go_library(
    name = "novactl_lib",
    srcs = ["main.go"],
    importpath = "github.com/discordnova/nova/novactl",
    visibility = ["//visibility:private"],
    deps = [
        "//novactl/cmd",
        "@com_github_spf13_cobra//:cobra",
    ],
)

go_binary(
    name = "novactl",
    embed = [":novactl_lib"],
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "novactl_pkg",
    srcs = [":novactl"],
    mode = "0755",
    visibility = ["//visibility:public"],
)
