load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")

test_suite(name = "tests")

go_library(
    name = "novactl_lib",
    srcs = ["main.go"],
    importpath = "github.com/discordnova/nova/novactl",
    visibility = ["//visibility:private"],
    deps = [
        "//novactl/cmd",
        "@com_github_rs_zerolog//:go_default_library",
        "@com_github_rs_zerolog//log:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
    ],
)

go_binary(
    name = "novactl",
    embed = [":novactl_lib"],
    visibility = ["//visibility:public"],
)

go_image(
    name = "image",
    embed = [":novactl_lib"],
    visibility = ["//visibility:public"],
)
