load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")

go_library(
    name = "novalet_lib",
    srcs = ["main.go"],
    importpath = "github.com/discordnova/nova/novalet",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "novalet",
    embed = [":novalet_lib"],
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "novalet_pkg",
    srcs = [":novalet"],
    mode = "0755",
    visibility = ["//visibility:public"],
)
