[package]
name = "rest-ratelimiter"
version = "0.1.0"
edition = "2018"

[dependencies]
tonic = "0.5"
tonic-build = "0.5"
prost = "0.8"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
# disabled "tokio-comp", "tokio-native-tls-comp" for now
redis = { version = "0.21.0", features = ["cluster"] }

[build-dependencies]
tonic-build = "0.5"

[[bin]]
name = "rest-ratelimiter"
path = "src/main.rs"

[package.metadata.raze]
workspace_path = "//ratelimiter/cargo"
genmode = "Remote"
default_gen_buildrs = true
package_aliases_dir = "cargo"
