load("@rules_rust//cargo:cargo_build_script.bzl", "cargo_build_script")
load("@rules_rust//rust:rust.bzl", "rust_binary")
load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")

rust_binary(
    name = "webhook",
    srcs = ["src/main.rs"],
    deps = [
        "//webhook/cargo:hyper",
        "//webhook/cargo:tokio",
        "//webhook/cargo:log",
        "//webhook/cargo:config",
        "//webhook/cargo:serde",
        "//webhook/cargo:libsodium_sys",
        "//webhook/cargo:base64",
    ]
)

pkg_tar(
    name = "webhook_pkg",
    srcs = [":webhook"],
    mode = "0755",
    visibility = ["//visibility:public"],
)
