[package]
name = "webhook"
version = "0.1.0"
edition = "2018"

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
log = { version = "0.4", features = ["std"] }
config = "0.11"
serde = { version = "1.0.8", features = ["derive"] }
libsodium-sys = "0.2.7"
hex = "0.4.3"
pretty_env_logger = "0.4"
serde_json = { version = "1.0" }

[[bin]]
name = "webhook"
path = "src/main.rs"
