[package]
name = "webhook"
version = "0.1.0"
edition = "2018"

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
common = { path = "../common/rust" }
serde = { version = "1.0.8", features = ["derive"] }
libsodium-sys = "0.2.7"
hex = "0.4.3"
serde_json = { version = "1.0" }
libc = "0.2.101"
lazy_static = "1.4.0"
ctor = "0.1.21"

[[bin]]
name = "webhook"
path = "src/main.rs"
