[package]
name = "common"
version = "0.1.0"
edition = "2018"

[dependencies]
pretty_env_logger = "0.4"
log = { version = "0.4", features = ["std"] }
serde = { version = "1.0.8", features = ["derive"] }
serde_repr = "0.1"
config = "0.11"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
enumflags2 = { version = "0.7.1", features = ["serde"] }
prometheus = { version = "0.12.0", features = ["process"] }
nats = "0.15.2"
testcontainers = "0.12.0"
serde_json = { version = "1.0" }

[dependencies.redis]
version = "*"
features = ["cluster", "connection-manager", "tokio-comp"]
