[package]
name = "all"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.139"
leash = { path = "../../libs/leash" }
shared = { path = "../../libs/shared" }

cache = { path = "../cache" }
gateway = { path = "../gateway" }
ratelimit = { path = "../ratelimit" }
rest = { path = "../rest" }
webhook = { path = "../webhook" }

tokio = { version = "1.23.0", features = ["full"] }
serde = "1.0.152"
serde_json = "1.0.91"
anyhow = "1.0.68"

config = "0.13.3"
pretty_env_logger = "0.4.0"

[lib]
crate-type = ["staticlib"]

[build-dependencies]
cbindgen = "0.24.3"