[package]
name = "all"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.139"
leash = { path = "../../libs/leash" }
shared = { path = "../../libs/shared" }

cache = { path = "../cache" }
gateway = { path = "../gateway" }
ratelimit = { path = "../ratelimit" }
rest = { path = "../rest" }
webhook = { path = "../webhook" }

tokio = { version = "1.23.1", features = ["rt"] }
serde = "1.0.152"
serde_json = "1.0.91"
anyhow = "1.0.68"

tracing = "0.1.37"

config = "0.13.3"

tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing-opentelemetry = "0.18.0"
opentelemetry = { version ="0.18.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.11.0" }

[lib]
crate-type = ["staticlib"]

[build-dependencies]
cbindgen = "0.24.3"