[package]
name = "cache"
version = "0.1.0"
edition = "2018"
description = "Stores the data from discord if needed"
readme = "README.md"
repository = "https://github.com/discordnova/nova.git"
keywords = ["discord", "scaleable", "cache"]
categories = ["microservices", "nova"]
license = "APACHE2"

[dependencies]
shared = { path = "../../libs/shared" }
proto = { path = "../../libs/proto" }

tokio = { version = "1", features = ["rt"] }
tokio-stream = "0.1.11"

serde = { version = "1.0.8", features = ["derive"] }
serde_json = { version = "1.0" }

async-nats = "0.25.1"
twilight-model = "0.14"
anyhow = "1.0.68"

tracing = "0.1.37"