[package]
name = "gateway"
version = "0.1.0"
edition = "2018"

[dependencies]
shared = { path = "../../libs/shared" }
proto = { path = "../../libs/proto" }
leash = { path = "../../libs/leash" }

tokio = { version = "1", features = ["rt", "signal"] }
tokio-stream = "0.1.11"

twilight-gateway = { version = "0.14" }
twilight-model = "0.14"

bytes = "1.3.0"
anyhow = "1.0.68"

serde = { version = "1.0.8", features = ["derive"] }
serde_json = { version = "1.0" }

tracing = "0.1.37"
tracing-futures = "0.2.5"

async-nats = "0.26.0"

tracing-opentelemetry = "0.18.0"
opentelemetry = "0.18.0"
opentelemetry-http = "0.7.0"

[target.'cfg(not(target_os = "windows"))'.dependencies]
tikv-jemallocator = "0.5"