[package]
name = "ratelimit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { workspace = true }
proto = { workspace = true }
leash = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-http = { workspace = true }
tracing = { workspace = true }
tracing-futures = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hyper = { workspace = true }

twilight-http-ratelimiting = { git = "https://github.com/MatthieuCoder/twilight.git" }
tonic = "0.8.3"
tokio-stream = "0.1.11"
redis = { version = "0.22.1", features = ["cluster", "connection-manager", "tokio-comp"] }

[dev-dependencies]
criterion = { workspace = true }
tokio-test = { workspace = true }
tracing-test = { workspace = true }
tracing-subscriber = { workspace = true }
test-log = { workspace = true }
env_logger = { workspace = true }

[target.'cfg(not(target_os = "windows"))'.dependencies]
tikv-jemallocator = { workspace = true }

[[bench]]
name = "bucket"
harness = false
