[package]
name = "rest"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../../libs/shared" }
proto = { path = "../../libs/proto" }
leash = { path = "../../libs/leash" }

hyper= "0.14"
http = "0.2.8"

tokio = { version = "1", features = ["rt"] }
serde = { version = "1.0.8", features = ["derive"] }
futures-util = "0.3.17"
hyper-rustls = "0.23.2"
lazy_static = "1.4.0"
xxhash-rust = { version = "0.8.2", features = ["xxh32"] }
twilight-http-ratelimiting = { git = "https://github.com/MatthieuCoder/twilight.git" }

tracing = "0.1.37"
anyhow = "1.0.68"
hashring = "0.3.0"
tonic = "0.8.3"
tokio-stream = "0.1.11"
dns-lookup = "1.0.8"
opentelemetry = "0.18.0"
opentelemetry-http = "0.7.0"
tracing-opentelemetry = "0.18.0"