[package]
name = "rest"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { workspace = true }
proto = { workspace = true }
leash = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-http = { workspace = true }
tracing = { workspace = true }
tracing-futures = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hyper = { workspace = true }

futures-util = "0.3.28"
hyper-rustls = "0.24.1"
lazy_static = "1.4.0"
xxhash-rust = { version = "0.8.6", features = ["xxh32"] }
twilight-http-ratelimiting = "0.15.1"

hashring = "0.3.0"
tonic = "0.9.2"
tokio-stream = "0.1.14"
dns-lookup = "2.0.2"
