[package]
name = "webhook"
version = "0.1.0"
edition = "2018"

[dependencies]
hyper = "0.14"
tokio = { version = "1", features = ["rt"] }
shared = { path = "../../libs/shared" }
proto = { path = "../../libs/proto" }
leash = { path = "../../libs/leash" }
tracing = "0.1.37"

serde = { version = "1.0.8", features = ["derive"] }
serde_json = { version = "1.0" }

hex = "0.4.3"
ed25519-dalek = "1"
twilight-model = { version = "0.14" }
anyhow = "1.0.68"

async-nats = "0.26.0"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5"