[package]
name = "webhook"
version = "0.1.0"
edition = "2018"

[dependencies]
tokio = { workspace = true }
shared = { workspace = true }
proto = { workspace = true }
leash = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hyper = { workspace = true }
anyhow = { workspace = true }

hex = "0.4.3"
ed25519-dalek = "1"
twilight-model = "0.14.2"

async-nats = "0.26.0"
