[package]
name = "all_in_one"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.147"
leash = { path = "../../libs/leash" }
shared = { path = "../../libs/shared" }

cache = { path = "../../exes/cache" }
gateway = { path = "../../exes/gateway" }
ratelimit = { path = "../../exes/ratelimit" }
rest = { path = "../../exes/rest" }
webhook = { path = "../../exes/webhook" }
ctrlc = "3.4.0"

tokio = { version = "1.29.1", features = ["rt"] }
serde = "1.0.166"
serde_json = "1.0.100"
anyhow = { version = "1.0.71", features = ["backtrace"] }

tracing = "0.1.37"

config = "0.13.3"

tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing-opentelemetry = "0.19.0"
opentelemetry = { version ="0.19.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.12.0" }

[lib]
crate-type = ["staticlib", "rlib"]

[build-dependencies]
cbindgen = "0.24.5"
