[package]
name = "leash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
anyhow = "1.0.68"
tokio = { version = "1.23.1", features = ["full"] }
pretty_env_logger = "0.4"
serde = "1.0.152"