[package]
name = "leash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
opentelemetry = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing = { workspace = true }

tracing-log = { version = "0.1.3", features = ["env_logger"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
opentelemetry-otlp = { version = "0.11.0", features = ["metrics"] }
