[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.8", features = ["derive"] }
serde_json = { version = "1.0" }
serde_repr = "0.1"

config = { version = "0.13", default-features = false, features = ["json", "yaml-rust", "ini"] }

async-nats = "0.25.1"
redis = { version = "0.22.1", features = ["cluster", "connection-manager", "tokio-comp"] }

tokio = { version = "1", features = ["signal", "rt"] }

twilight-model = "0.14"
thiserror = "1.0.38"
anyhow = "1.0.68"

serde_test = "1.0.152"

tracing = "0.1.37"