[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
opentelemetry = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

config = { version = "0.13", default-features = false, features = ["json", "yaml-rust", "ini"] }
redis = { version = "0.23.0", features = ["cluster", "connection-manager", "tokio-comp"] }

async-nats = "0.29.0"
twilight-model = "0.15.2"
anyhow = "1.0.71"
opentelemetry-otlp = "0.12.0"
