load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "lib",
    srcs = [
        "config.go",
        "main.go",
    ],
    importpath = "github.com/discordnova/nova/manager/lib",
    visibility = ["//visibility:public"],
    deps = [
        "//common/management",
        "//manager/lib/services",
        "@org_golang_google_grpc//:go_default_library",
    ],
)
