load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "cmd",
    srcs = [
        "init.go",
        "version.go",
    ],
    importpath = "github.com/discordnova/nova/novactl/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//novactl/lib",
        "@com_github_go_git_go_git_v5//:go-git",
        "@com_github_spf13_cobra//:cobra",
        "@com_github_twinproduction_go_color//:go-color",
    ],
)
