load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "cmd",
    srcs = [
        "cluster.go",
        "init.go",
        "version.go",
    ],
    importpath = "github.com/discordnova/nova/novactl/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//common",
        "//common/management",
        "//novactl/lib",
        "@com_github_go_git_go_git_v5//:go_default_library",
        "@com_github_go_git_go_git_v5//config:go_default_library",
        "@com_github_olekukonko_tablewriter//:go_default_library",
        "@com_github_rs_zerolog//log:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
        "@com_github_twinproduction_go_color//:go_default_library",
    ],
)
