load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "cmd",
    srcs = [
        "cluster.go",
        "init.go",
        "version.go",
    ],
    importpath = "github.com/discordnova/nova/novactl/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//common",
        "//common/management",
        "//novactl/lib",
        "@com_github_go_git_go_git_v5//:go-git",
        "@com_github_go_git_go_git_v5//config",
        "@com_github_olekukonko_tablewriter//:tablewriter",
        "@com_github_rs_zerolog//log",
        "@com_github_spf13_cobra//:cobra",
    ],
)
