load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "lib",
    srcs = ["vesion.go"],
    importpath = "github.com/discordnova/nova/novactl/lib",
    visibility = ["//visibility:public"],
)

go_test(
    name = "lib_test",
    srcs = ["version_test.go"],
    deps = [":lib"],
)
