load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "lib",
    srcs = ["conn.go"],
    importpath = "github.com/discordnova/nova/novactl/lib",
    visibility = ["//visibility:public"],
    deps = [
        "//common/management",
        "@org_golang_google_grpc//:go_default_library",
    ],
)
