load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "lib",
    srcs = ["internal_transporter.go"],
    importpath = "github.com/discordnova/nova/novalet/lib",
    visibility = ["//visibility:public"],
    deps = [
        "//common/gateway",
        "@com_github_rs_zerolog//log",
    ],
)
